--- a/Exercise 1.ipynb
+++ b/Exercise 1.ipynb
@@ -7,6 +7,9 @@
     "Exercise 1\n",
     "Create a program that asks the user to enter their name and their age. Print out a message addressed to them that tells them the year that they will turn 100 years old."
    ]
+   "Discussion": [ "1. Getting user input\n",
+"2. Manipulating strings (a few ways)\n"
+   ]
   },
   {
    "cell_type": "markdown",
